fixed a bug and added a better scrollbar

--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities {
     ::-webkit-scrollbar {
-        width: 20px;
+        width: 4px;
     }
 
     ::-webkit-scrollbar-track {
@@ -13,9 +13,7 @@
 
     ::-webkit-scrollbar-thumb {
         background-color: #d6dee1;
-        border-radius: 20px;
-        border: 5px solid transparent;
-        background-clip: content-box;
+        border-radius: 10px;
     }
 
     ::-webkit-scrollbar-thumb:hover {
